[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Art/Tapes/Red.png" type="Texture" id=1]
[ext_resource path="res://World/LevelTileset.tres" type="TileSet" id=2]
[ext_resource path="res://World/Secret.gd" type="Script" id=3]
[ext_resource path="res://Assets/Music/Victory.wav" type="AudioStream" id=4]
[ext_resource path="res://World/BobSprite.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
resource_name = "Found"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath("FoundSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("LevelTilemap")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset_player"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("CollisionShape2D/CPUParticles2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Secret" type="Area2D"]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="CollisionShape2D"]
emitting = false
amount = 32
lifetime = 2.0
one_shot = true
speed_scale = 0.8
explosiveness = 0.9
local_coords = false
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2( 0, -1 )
spread = 20.0
gravity = Vector2( 0, 300 )
initial_velocity = 100.0
scale_amount = 2.0
scale_amount_curve = SubResource( 4 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="LevelTilemap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="FoundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 6.0
bus = "Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Found = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Secret_body_entered"]
[connection signal="body_entered" from="ActivationArea" to="." method="_on_ActivationArea_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_ActivationArea_body_exited"]
